<resources>
    <string name="app_name">Cryptofuelx Wallet</string>
    <string name="file_provider_authority" translatable="false">com.itechsoftsolutions.cryptwallet.fileprovider</string>
    <string name="intent_type_image" translatable="false">image/*</string>
    <string name="intent_extra_return_data" translatable="false">return-data</string>
    <string name="please_wait">Please Wait</string>
    <string name="loading">Loading…</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="tokenization_key" translatable="false">sandbox_x68cfm6c_y3yksnpgkmg5vw9x</string>
    <string name="api_base_url" translatable="false">https://wallet.cryptofuelx.com/api/</string>
    <string name="error_could_not_create_bitmap">Could not create bitmap from the view</string>
    <string name="error_dao_is_null">Dao is null</string>
    <string name="error_adapter_size_is_null">Adapter size is null</string>
    <string name="error_image_picking_intent_is_null">Image picking intent is null</string>
    <string name="error_fragment_context_is_null">Fragment context is null</string>
    <string name="error_selected_image_uri_is_null">Selected image uri is null</string>
    <string name="error_could_not_crop_image">Could not crop image</string>
    <string name="error_context_is_null">Context is null</string>
    <string name="error_image_uri_is_null">Image Uri is null</string>
    <string name="error_internet_connection">Please check your internet connection</string>
    <string name="error_unauthenticated">Unauthenticated.</string>
    <string name="warning_permissions_are_required">Permissions are required</string>
    <string name="on_boarding_0_title">Quick and Easy Process</string>
    <string name="on_boarding_1_title">Highly Security Process</string>
    <string name="on_boarding_2_title">Easy Transaction</string>
    <string name="on_boarding_0_subtitle">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="on_boarding_1_subtitle">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="on_boarding_2_subtitle">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="on_boarding_skip">Skip</string>
    <string name="on_boarding_get_started">Get Started</string>
    <string name="registration_toolbar_title">Register</string>
    <string name="registration_title">Sign Up</string>
    <string name="registration_subtitle">Create a new account</string>
    <string name="registration_first_name">First name</string>
    <string name="registration_last_name">Last name</string>
    <string name="registration_mobile_phone">Mobile phone</string>
    <string name="registration_email">E-mail</string>
    <string name="registration_password">Password</string>
    <string name="registration_confirm_password">Confirm password</string>
    <string name="registration_sign_up">Sign Up</string>
    <string name="registration_already_have_an_account">Already have an account?</string>
    <string name="registration_sign_in">Sign In</string>
    <string name="registration_ok">OK</string>
    <string name="registration_error_valid_fields">Please fill up all the fields</string>
    <string name="registration_error_valid_email">Please enter valid email</string>
    <string name="registration_error_valid_mobile_phone">Please enter valid phone number</string>
    <string name="registration_error_user_name_char_limit">Name can not be more than 50 characters</string>
    <string name="registration_error_valid_password">Password can not be less than 6 characters and more than 12 characters</string>
    <string name="registration_error_not_same_password">Passwords don\'t match</string>
    <string name="registration_confirmation_of_registration">A confirmation email was sent to %s. Please go to your email and confirm the registration</string>
    <string name="registration_error_of_registration">Could not register. Try again please</string>
    <string name="login_toolbar_title">Login</string>
    <string name="login_title">Sign In</string>
    <string name="login_subtitle">Please sign into your account</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_dont_have_account_yet">Don\'t have account yet?</string>
    <string name="login_error_valid_fields">Please fill up all the fields</string>
    <string name="login_error_valid_email">Please enter valid email</string>
    <string name="login_error_valid_password">Password can not be less than 6 characters and more than 12 characters</string>
    <string name="login_error_login_failed">Could not login. Try again please</string>
    <string name="login_login_with">Log in with</string>
    <string name="forgot_password_toolbar_title">Forgot Password</string>
    <string name="forgot_password_subtitle">Please enter the email address to request a password reset</string>
    <string name="forgot_password_email">E-mail</string>
    <string name="forgot_password_send">Send</string>
    <string name="forgot_password_error_valid_field">Please fill up the field</string>
    <string name="forgot_password_error_valid_email">Please enter valid email</string>
    <string name="forgot_password_confirmation">Please visit your email to complete the password recovery</string>
    <string name="forgot_password_error_of_process">Could not reset password. Try again please</string>
    <string name="code_verification_title">Code Verification</string>
    <string name="code_verification_subtitle">Enter the verification code which was sent to your email</string>
    <string name="code_verification_verify">Verify</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_subtitle">Please write a new password to reset your password</string>
    <string name="reset_password_reset_password">Reset Password</string>
    <string name="reset_password_new_password">New Password</string>
    <string name="reset_password_confirm_password">Confirm Password</string>
    <string name="welcome_login">Log In</string>
    <string name="welcome_register">Register</string>
    <string name="dashboard_toolbar_title">Hi, %s</string>
    <string name="dashboard_home">Home</string>
    <string name="dashboard_book_an_appointment">Book An Appointment</string>
    <string name="dashboard_my_appointments">My Appointments</string>
    <string name="dashboard_about_us">About us</string>
    <string name="dashboard_services">Services</string>
    <string name="dashboard_availability">Availability</string>
    <string name="dashboard_gallery">Gallery</string>
    <string name="dashboard_news_feed">News feed</string>
    <string name="dashboard_reach_us">Reach us</string>
    <string name="dashboard_contact_us">Contact us</string>
    <string name="dashboard_drawer_our_services">Services</string>
    <string name="dashboard_drawer_about_us">About Us</string>
    <string name="dashboard_drawer_reach_us">Reach Us</string>
    <string name="dashboard_drawer_contact_us">Contact Us</string>
    <string name="dashboard_drawer_log_out">Log Out</string>
    <string name="dashboard_drawer_title">Menu</string>
    <string name="dashboard_drawer_english" translatable="false">English</string>
    <string name="dashboard_drawer_portuguese" translatable="false">Portuguese</string>
    <string name="select_clinic_toolbar_title">Book an appointment</string>
    <string name="select_clinic_subtitle">Choose establishment</string>
    <string name="select_clinic_next_steps">Next</string>
    <string name="select_clinic_error_of_process">Could not load clinic list. Try again</string>
    <string name="select_appointment_type_toolbar_title">Book an appointment</string>
    <string name="select_appointment_type_subtitle">Choose service</string>
    <string name="select_appointment_type_next_steps">Next</string>
    <string name="select_appointment_type_error_of_process">Could not load types. Try again</string>
    <string name="select_date_session_toolbar_title">Book an appointment</string>
    <string name="select_date_session_subtitle">Choose the best date</string>
    <string name="select_date_session_select_time">Select the day time</string>
    <string name="select_date_session_morning">Morning</string>
    <string name="select_date_session_afternoon">Afternoon</string>
    <string name="select_date_session_anytime">Anytime</string>
    <string name="select_date_session_book_appointment">Book appointment</string>
    <string name="select_date_session_error_of_process">Could not book appointment. Try again</string>
    <string name="services_toolbar_title">Our Services</string>
    <string name="services_error_of_process">Could not load services. Try again</string>
    <string name="services_skip_idk">I don\'t know</string>
    <string name="availability_toolbar_title">Availability</string>
    <string name="availability_subtitle">We Are Available On</string>
    <string name="availability_book_appointment">Book Appointment</string>
    <string name="availability_error_of_process">Could not load availabilities. Try again</string>
    <string name="availability_session">%s - %s</string>
    <string name="availability_holiday">Holiday</string>
    <string name="contact_us_toolbar_title">Contact Us</string>
    <string name="contact_us_subtitle">Call Us</string>
    <string name="contact_us_send_your_message">Send Your Message</string>
    <string name="contact_us_your_name">Your Name</string>
    <string name="contact_us_your_email">Your Email</string>
    <string name="contact_us_your_message">Your Message</string>
    <string name="contact_us_send_message">Send Message</string>
    <string name="contact_us_error_valid_fields">Please fill up all the fields</string>
    <string name="contact_us_error_valid_email">Please enter valid email</string>
    <string name="contact_us_error_user_name_char_limit">Name can not be more than 50 characters</string>
    <string name="contact_us_error_of_process">Could not send the message. Try again</string>
    <string name="contact_us_successful_process">The message has been successfully sent</string>
    <string name="contact_us_calling_phone_number">+351262147549</string>
    <string name="contact_us_phone">Phone</string>
    <string name="contact_us_call_us">Call us</string>
    <string name="about_toolbar_title">About us</string>
    <string name="about_error_of_process">Could not load about page content. Try again</string>
    <string name="reach_us_toolbar_title">Reach Us</string>
    <string name="reach_us_address">%s, %s, %s</string>
    <string name="reach_us_book_appointment">Book Appointment</string>
    <string name="write_your_wallet_name">Write your wallet name</string>
    <string name="name">Name</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="save">Save</string>
    <string name="type_here">Type here...</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="referral">Referral</string>
    <string name="share_link_to_your_contact">Share link to your contact</string>
    <string name="copy">Copy</string>
    <string name="or">Or</string>
    <string name="share_your_referral_address_on">Share your referral address on</string>
    <string name="my_references">My References</string>
</resources>