<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_head_container"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_110"
        android:background="@drawable/gradient_color_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.wallet.cryptofuelx.main.ui.base.widget.CustomStatusBarView
            android:id="@+id/status_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/text_view_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/width_32"
            android:layout_height="@dimen/height_32"
            android:layout_marginStart="@dimen/margin_16"
            android:padding="@dimen/padding_4"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_view_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_bar"
            app:tint="@color/colorWhite"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_settings"
            android:layout_width="@dimen/width_32"
            android:layout_height="@dimen/height_32"
            android:layout_marginEnd="@dimen/margin_16"
            android:padding="@dimen/padding_4"
            android:src="@drawable/ic_settings"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view_title"
            app:layout_constraintTop_toBottomOf="@+id/status_bar"
            app:tint="@color/colorWhite"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/semi_bold"
            android:gravity="center"
            android:maxLines="@integer/single_line"
            android:padding="@dimen/padding_16"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/image_view_settings"
            app:layout_constraintStart_toEndOf="@+id/btn_back"
            app:layout_constraintTop_toBottomOf="@+id/status_bar" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--current password-->
    <TextView
        android:id="@+id/tv_current_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/hind_vadodara_medium"
        android:text="@string/current_password"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_current_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_head_container"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/edit_text_current_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_color_secondary"
        android:hint="@string/type_here"
        android:inputType="textPassword"
        android:padding="16dp"
        android:singleLine="true"
        android:tag="Current Password"
        app:layout_constraintBottom_toTopOf="@id/tv_new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_current_password"
        app:layout_constraintTop_toBottomOf="@id/tv_current_password" />

    <!--new password-->

    <TextView
        android:id="@+id/tv_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/hind_vadodara_medium"
        android:text="@string/new_password"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_current_password"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/edit_text_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_color_secondary"
        android:hint="@string/type_here"
        android:inputType="textPassword"
        android:padding="16dp"
        android:singleLine="true"
        android:tag="New Password"
        app:layout_constraintBottom_toTopOf="@id/tv_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_new_password"
        app:layout_constraintTop_toBottomOf="@id/tv_new_password" />

    <!--confirm new password-->

    <TextView
        android:id="@+id/tv_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/hind_vadodara_medium"
        android:text="@string/confirm_password"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_new_password"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/edit_text_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_color_secondary"
        android:hint="@string/type_here"
        android:inputType="textPassword"
        android:padding="16dp"
        android:singleLine="true"
        android:tag="Confirm Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/tv_confirm_password" />

    <TextView
        android:id="@+id/btn_change_password"
        style="@style/AppButton.Common"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edit_text_confirm_password"
        app:layout_constraintStart_toStartOf="@id/edit_text_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_confirm_password"
        app:layout_constraintVertical_bias="0" />


</androidx.constraintlayout.widget.ConstraintLayout>